plugins {
    id 'io.spring.dependency-management' version '1.1.4' apply false
}

subprojects {
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'java-library'

    compileJava {
        sourceCompatibility = 17
        targetCompatibility = 17
    }

    ext {
        set('springBootVersion', "3.2.2")
    }

    repositories {
        mavenCentral()
    }

    dependencies {

        annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
        annotationProcessor 'org.projectlombok:lombok'
        compileOnly 'org.projectlombok:lombok'

        testImplementation 'org.testng:testng:7.7.0'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    }
}


